Fix missing margin
By default, all `p` elements have some bottom margin, but on the
home page, we were overriding that with `margin: 0;` - that was done
using a overly specific selector and by using the `margin` shorthand, so
our `margin-top-large` utility class was not working.

https://github.com/houndci/hound/blob/5cdb8ec492d77aa2cf4f566e3f6b17f2f389ab54/app/assets/stylesheets/pages/home/_home-objects.scss#L15-L17

Part of this problem is what is called an ‘accidental reset’:
https://css-tricks.com/accidental-css-resets/

--- a/app/assets/stylesheets/pages/home/_home-objects.scss
+++ b/app/assets/stylesheets/pages/home/_home-objects.scss
@@ -13,7 +13,7 @@
   }
 
   p {
-    margin: 0;
+    margin-bottom: 0;
   }
 }
 
